--- a/backend/src/main/resources/messages.properties
+++ b/backend/src/main/resources/messages.properties
@@ -1,7 +1,16 @@
 mensagem.invalida=Mensagem inv\u00E1lida
 recurso.nao-encontrado=Recurso n\u00E3o encontrado
+recurso.operacao-nao-permitida=Opera\u00E7\u00E3o n\u00E3o permitida
+pessoa.inexistente-ou-inativa=Pessoa inexistente ou inativa para incluir no lan\u00E7amento
 
-categoria.nome=Nome
+category.name=Nome
 
-pessoa.nome=Nome
-pessoa.ativo=Ativo
+person.name=Nome
+person.active=Ativo
+
+transaction.description=Descri\u00E7\u00E3o
+transaction.dueDate=Data de vencimento
+transaction.value=Valor
+transaction.type=Tipo
+transaction.category=Categoria
+transaction.person=Pessoa
